mssql-persistent/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mssql-persistent
  labels:
    app: mssql
    argocd.argoproj.io/managed-by: openshift-gitops
