mssql-persistent/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: mssql-app-service
  namespace: mssql-persistent
spec:
  selector:
    app: mssql-app
  ports:
    - name: "tcp"
      protocol: TCP
      port: 5000
      targetPort: 5000
