mssql-persistent/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mssql-app-route
  namespace: mssql-persistent
spec:
  path: "/"
  to:
    kind: Service
    name: mssql-app-service
